--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "minimatch": "~3.0.0",
     "mkdirp": "~0.5.1",
     "promise-map-series": "~0.2.2",
+    "range-parser": "^1.2.0",
+    "range-stream": "^1.1.0",
     "require-relative": "~0.8.7",
     "resolve": "^1.1.7",
     "rimraf": "~2.5.2",
